Ajuste en DTOs, service, controller, assembler y ControllerV2. Ajuste en Tests acorde a services nuevos