@@ -1,19 +1,8 @@
 package com.example.NoLimits.service.catalogos;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
 import com.example.NoLimits.Multimedia._exceptions.RecursoNoEncontradoException;
+import com.example.NoLimits.Multimedia.dto.catalogos.response.EmpresasResponseDTO;
+import com.example.NoLimits.Multimedia.dto.catalogos.update.EmpresasUpdateDTO;
 import com.example.NoLimits.Multimedia.model.catalogos.EmpresaModel;
 import com.example.NoLimits.Multimedia.model.catalogos.EmpresasModel;
 import com.example.NoLimits.Multimedia.model.producto.ProductoModel;
@@ -22,15 +11,29 @@ import com.example.NoLimits.Multimedia.repository.catalogos.EmpresasRepository;
 import com.example.NoLimits.Multimedia.repository.producto.ProductoRepository;
 import com.example.NoLimits.Multimedia.service.catalogos.EmpresasService;
 
+import java.util.List;
+import java.util.Optional;
+
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ActiveProfiles;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+import static org.mockito.ArgumentMatchers.any;
+
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 @SpringBootTest
 @ActiveProfiles("test")
-public class EmpresasServiceTest {
+class EmpresasServiceTest {
 
     @Autowired
     private EmpresasService empresasService;
@@ -43,6 +46,8 @@ public class EmpresasServiceTest {
 
     @MockBean
     private EmpresaRepository empresaRepository;
+
+    // ================== HELPERS ==================
 
     private ProductoModel producto() {
         ProductoModel p = new ProductoModel();
@@ -67,37 +72,38 @@ public class EmpresasServiceTest {
         return rel;
     }
 
-    @Test
-    public void testFindByProducto() {
-        List<EmpresasModel> lista = Arrays.asList(relacion());
-        when(empresasRepository.findByProducto_Id(1L)).thenReturn(lista);
+    private EmpresasUpdateDTO updateDTO(Long productoId, Long empresaId) {
+        EmpresasUpdateDTO dto = new EmpresasUpdateDTO();
+        dto.setProductoId(productoId);
+        dto.setEmpresaId(empresaId);
+        return dto;
+    }
 
-        List<EmpresasModel> resultado = empresasService.findByProducto(1L);
+    // ================== FIND ==================
+
+    @Test
+    void testFindByProducto() {
+        when(empresasRepository.findByProducto_Id(1L))
+                .thenReturn(List.of(relacion()));
+
+        List<EmpresasResponseDTO> resultado = empresasService.findByProducto(1L);
 
         assertNotNull(resultado);
         assertEquals(1, resultado.size());
-        assertEquals(empresa().getId(), resultado.get(0).getEmpresa().getId());
+
+        EmpresasResponseDTO dto = resultado.get(0);
+        assertEquals(10L, dto.getId());
+        assertEquals(1L, dto.getProductoId());
+        assertEquals(2L, dto.getEmpresaId());
+        assertEquals("Sony Pictures", dto.getEmpresaNombre());
     }
 
-    @Test
-    public void testFindByEmpresa() {
-        List<EmpresasModel> lista = Arrays.asList(relacion());
-        when(empresasRepository.findByEmpresa_Id(2L)).thenReturn(lista);
-
-        List<EmpresasModel> resultado = empresasService.findByEmpresa(2L);
-
-        assertNotNull(resultado);
-        assertEquals(1, resultado.size());
-        assertEquals(producto().getId(), resultado.get(0).getProducto().getId());
-    }
+    // ================== LINK ==================
 
     @Test
-    public void testLink_CreaRelacionSiNoExiste() {
-        ProductoModel p = producto();
-        EmpresaModel e = empresa();
-
-        when(productoRepository.findById(1L)).thenReturn(Optional.of(p));
-        when(empresaRepository.findById(2L)).thenReturn(Optional.of(e));
+    void testLink_CreaRelacionSiNoExiste() {
+        when(productoRepository.findById(1L)).thenReturn(Optional.of(producto()));
+        when(empresaRepository.findById(2L)).thenReturn(Optional.of(empresa()));
         when(empresasRepository.existsByProducto_IdAndEmpresa_Id(1L, 2L)).thenReturn(false);
         when(empresasRepository.save(any(EmpresasModel.class)))
                 .thenAnswer(invocation -> {
@@ -106,83 +112,173 @@ public class EmpresasServiceTest {
                     return rel;
                 });
 
-        EmpresasModel resultado = empresasService.link(1L, 2L);
+        EmpresasResponseDTO resultado = empresasService.link(1L, 2L);
 
         assertNotNull(resultado);
-        assertEquals(p, resultado.getProducto());
-        assertEquals(e, resultado.getEmpresa());
+        assertEquals(10L, resultado.getId());
+        assertEquals(1L, resultado.getProductoId());
+        assertEquals(2L, resultado.getEmpresaId());
+        assertEquals("Sony Pictures", resultado.getEmpresaNombre());
         verify(empresasRepository, times(1)).save(any(EmpresasModel.class));
     }
 
     @Test
-    public void testLink_LanzaRecursoNoEncontradoSiProductoNoExiste() {
+    void testLink_LanzaRecursoNoEncontradoSiProductoNoExiste() {
         when(productoRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(RecursoNoEncontradoException.class,
                 () -> empresasService.link(1L, 2L));
+
+        verify(empresaRepository, never()).findById(2L);
+        verify(empresasRepository, never()).save(any(EmpresasModel.class));
     }
 
     @Test
-    public void testLink_LanzaRecursoNoEncontradoSiEmpresaNoExiste() {
+    void testLink_LanzaRecursoNoEncontradoSiEmpresaNoExiste() {
         when(productoRepository.findById(1L)).thenReturn(Optional.of(producto()));
         when(empresaRepository.findById(2L)).thenReturn(Optional.empty());
 
         assertThrows(RecursoNoEncontradoException.class,
                 () -> empresasService.link(1L, 2L));
+
+        verify(empresasRepository, never()).save(any(EmpresasModel.class));
     }
 
     @Test
-    public void testLink_SiRelacionExisteDevuelveExistenteSinGuardar() {
+    void testLink_SiRelacionExisteDevuelveExistenteSinGuardar() {
         EmpresasModel existente = relacion();
 
         when(productoRepository.findById(1L)).thenReturn(Optional.of(producto()));
         when(empresaRepository.findById(2L)).thenReturn(Optional.of(empresa()));
         when(empresasRepository.existsByProducto_IdAndEmpresa_Id(1L, 2L)).thenReturn(true);
-        when(empresasRepository.findByProducto_Id(1L)).thenReturn(Arrays.asList(existente));
+        when(empresasRepository.findByProducto_Id(1L)).thenReturn(List.of(existente));
 
-        EmpresasModel resultado = empresasService.link(1L, 2L);
+        EmpresasResponseDTO resultado = empresasService.link(1L, 2L);
 
         assertNotNull(resultado);
-        assertEquals(existente.getId(), resultado.getId());
+        assertEquals(10L, resultado.getId());
+        assertEquals(1L, resultado.getProductoId());
+        assertEquals(2L, resultado.getEmpresaId());
+        assertEquals("Sony Pictures", resultado.getEmpresaNombre());
         verify(empresasRepository, never()).save(any(EmpresasModel.class));
     }
 
+    // ================== PATCH ==================
+
     @Test
-    public void testUnlink_EliminaCuandoRelacionExiste() {
-        when(productoRepository.findById(1L)).thenReturn(Optional.of(producto()));
-        when(empresaRepository.findById(2L)).thenReturn(Optional.of(empresa()));
-        when(empresasRepository.existsByProducto_IdAndEmpresa_Id(1L, 2L)).thenReturn(true);
+    void testPatch_CambiaSoloProducto_OK() {
+        EmpresasModel rel = relacion();
+        EmpresasUpdateDTO dto = updateDTO(3L, null);
 
-        empresasService.unlink(1L, 2L);
+        ProductoModel nuevoProducto = new ProductoModel();
+        nuevoProducto.setId(3L);
+        nuevoProducto.setNombre("Producto Nuevo");
 
-        verify(empresasRepository, times(1)).deleteByProducto_IdAndEmpresa_Id(1L, 2L);
+        when(empresasRepository.findById(10L)).thenReturn(Optional.of(rel));
+        when(productoRepository.findById(3L)).thenReturn(Optional.of(nuevoProducto));
+        when(empresasRepository.save(any(EmpresasModel.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        EmpresasResponseDTO resultado = empresasService.patch(10L, dto);
+
+        assertNotNull(resultado);
+        assertEquals(10L, resultado.getId());
+        assertEquals(3L, resultado.getProductoId());
+        assertEquals(2L, resultado.getEmpresaId());
+        assertEquals("Sony Pictures", resultado.getEmpresaNombre());
     }
 
     @Test
-    public void testUnlink_IdempotenteCuandoRelacionNoExiste() {
-        when(productoRepository.findById(1L)).thenReturn(Optional.of(producto()));
-        when(empresaRepository.findById(2L)).thenReturn(Optional.of(empresa()));
-        when(empresasRepository.existsByProducto_IdAndEmpresa_Id(1L, 2L)).thenReturn(false);
+    void testPatch_CambiaSoloEmpresa_OK() {
+        EmpresasModel rel = relacion();
+        EmpresasUpdateDTO dto = updateDTO(null, 4L);
 
-        empresasService.unlink(1L, 2L);
+        EmpresaModel nuevaEmpresa = new EmpresaModel();
+        nuevaEmpresa.setId(4L);
+        nuevaEmpresa.setNombre("Marvel Studios");
 
-        verify(empresasRepository, never()).deleteByProducto_IdAndEmpresa_Id(1L, 2L);
+        when(empresasRepository.findById(10L)).thenReturn(Optional.of(rel));
+        when(empresaRepository.findById(4L)).thenReturn(Optional.of(nuevaEmpresa));
+        when(empresasRepository.save(any(EmpresasModel.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        EmpresasResponseDTO resultado = empresasService.patch(10L, dto);
+
+        assertNotNull(resultado);
+        assertEquals(10L, resultado.getId());
+        assertEquals(1L, resultado.getProductoId());
+        assertEquals(4L, resultado.getEmpresaId());
+        assertEquals("Marvel Studios", resultado.getEmpresaNombre());
     }
 
     @Test
-    public void testUnlink_LanzaRecursoNoEncontradoSiProductoNoExiste() {
-        when(productoRepository.findById(1L)).thenReturn(Optional.empty());
+    void testPatch_CambiaProductoYEempresa_OK() {
+        EmpresasModel rel = relacion();
+        EmpresasUpdateDTO dto = updateDTO(3L, 4L);
+
+        ProductoModel nuevoProducto = new ProductoModel();
+        nuevoProducto.setId(3L);
+        nuevoProducto.setNombre("Producto Nuevo");
+
+        EmpresaModel nuevaEmpresa = new EmpresaModel();
+        nuevaEmpresa.setId(4L);
+        nuevaEmpresa.setNombre("Marvel Studios");
+
+        when(empresasRepository.findById(10L)).thenReturn(Optional.of(rel));
+        when(productoRepository.findById(3L)).thenReturn(Optional.of(nuevoProducto));
+        when(empresaRepository.findById(4L)).thenReturn(Optional.of(nuevaEmpresa));
+        when(empresasRepository.save(any(EmpresasModel.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        EmpresasResponseDTO resultado = empresasService.patch(10L, dto);
+
+        assertNotNull(resultado);
+        assertEquals(10L, resultado.getId());
+        assertEquals(3L, resultado.getProductoId());
+        assertEquals(4L, resultado.getEmpresaId());
+        assertEquals("Marvel Studios", resultado.getEmpresaNombre());
+    }
+
+    @Test
+    void testPatch_Lanza404_SiRelacionNoExiste() {
+        EmpresasUpdateDTO dto = updateDTO(null, null);
+        when(empresasRepository.findById(99L)).thenReturn(Optional.empty());
 
         assertThrows(RecursoNoEncontradoException.class,
-                () -> empresasService.unlink(1L, 2L));
+                () -> empresasService.patch(99L, dto));
     }
 
     @Test
-    public void testUnlink_LanzaRecursoNoEncontradoSiEmpresaNoExiste() {
-        when(productoRepository.findById(1L)).thenReturn(Optional.of(producto()));
-        when(empresaRepository.findById(2L)).thenReturn(Optional.empty());
+    void testPatch_Lanza404_SiNuevoProductoNoExiste() {
+        EmpresasModel rel = relacion();
+        EmpresasUpdateDTO dto = updateDTO(3L, null);
+
+        when(empresasRepository.findById(10L)).thenReturn(Optional.of(rel));
+        when(productoRepository.findById(3L)).thenReturn(Optional.empty());
 
         assertThrows(RecursoNoEncontradoException.class,
-                () -> empresasService.unlink(1L, 2L));
+                () -> empresasService.patch(10L, dto));
+    }
+
+    @Test
+    void testPatch_Lanza404_SiNuevaEmpresaNoExiste() {
+        EmpresasModel rel = relacion();
+        EmpresasUpdateDTO dto = updateDTO(null, 4L);
+
+        when(empresasRepository.findById(10L)).thenReturn(Optional.of(rel));
+        when(empresaRepository.findById(4L)).thenReturn(Optional.empty());
+
+        assertThrows(RecursoNoEncontradoException.class,
+                () -> empresasService.patch(10L, dto));
+    }
+
+    // ================== UNLINK ==================
+
+    @Test
+    void testUnlink_InvocaDeleteConIds() {
+        empresasService.unlink(1L, 2L);
+
+        verify(empresasRepository, times(1))
+                .deleteByProducto_IdAndEmpresa_Id(1L, 2L);
     }
 }
