@@ -1,30 +1,33 @@
-// Ruta: src/test/java/com/example/NoLimits/service/TipoEmpresaServiceTest.java
 package com.example.NoLimits.service.catalogos;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
 import com.example.NoLimits.Multimedia._exceptions.RecursoNoEncontradoException;
+import com.example.NoLimits.Multimedia.dto.catalogos.request.TipoEmpresaRequestDTO;
+import com.example.NoLimits.Multimedia.dto.catalogos.response.TipoEmpresaResponseDTO;
+import com.example.NoLimits.Multimedia.dto.catalogos.update.TipoEmpresaUpdateDTO;
 import com.example.NoLimits.Multimedia.model.catalogos.TipoEmpresaModel;
 import com.example.NoLimits.Multimedia.repository.catalogos.TipoEmpresaRepository;
 import com.example.NoLimits.Multimedia.repository.catalogos.TiposEmpresaRepository;
 import com.example.NoLimits.Multimedia.service.catalogos.TipoEmpresaService;
+
+import java.util.List;
+import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ActiveProfiles;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -39,129 +42,180 @@ public class TipoEmpresaServiceTest {
     @MockBean
     private TiposEmpresaRepository tiposEmpresaRepository;
 
-    private TipoEmpresaModel tipoEmpresa() {
+    // ==========================
+    // Helpers
+    // ==========================
+
+    private TipoEmpresaModel tipoEmpresaEntity() {
         TipoEmpresaModel t = new TipoEmpresaModel();
         t.setId(1L);
         t.setNombre("Publisher");
         return t;
     }
 
+    private TipoEmpresaRequestDTO request(String nombre) {
+        TipoEmpresaRequestDTO dto = new TipoEmpresaRequestDTO();
+        dto.setNombre(nombre);
+        return dto;
+    }
+
+    private TipoEmpresaUpdateDTO update(String nombre) {
+        TipoEmpresaUpdateDTO dto = new TipoEmpresaUpdateDTO();
+        dto.setNombre(nombre);
+        return dto;
+    }
+
+    // ==========================
+    // findAll / findById
+    // ==========================
+
     @Test
     public void testFindAll() {
-        List<TipoEmpresaModel> lista = Arrays.asList(tipoEmpresa());
-        when(tipoEmpresaRepository.findAll()).thenReturn(lista);
+        when(tipoEmpresaRepository.findAll())
+                .thenReturn(List.of(tipoEmpresaEntity()));
 
-        List<TipoEmpresaModel> resultado = tipoEmpresaService.findAll();
+        List<TipoEmpresaResponseDTO> resultado = tipoEmpresaService.findAll();
 
         assertNotNull(resultado);
         assertEquals(1, resultado.size());
-        assertEquals("Publisher", resultado.get(0).getNombre());
+        TipoEmpresaResponseDTO dto = resultado.get(0);
+        assertEquals(1L, dto.getId());
+        assertEquals("Publisher", dto.getNombre());
     }
 
     @Test
     public void testFindById_Existe() {
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.of(tipoEmpresa()));
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.of(tipoEmpresaEntity()));
 
-        TipoEmpresaModel resultado = tipoEmpresaService.findById(1L);
+        TipoEmpresaResponseDTO dto = tipoEmpresaService.findById(1L);
 
-        assertNotNull(resultado);
-        assertEquals(1L, resultado.getId());
+        assertNotNull(dto);
+        assertEquals(1L, dto.getId());
+        assertEquals("Publisher", dto.getNombre());
     }
 
     @Test
     public void testFindById_NoExiste_LanzaRecursoNoEncontrado() {
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.empty());
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.empty());
 
         assertThrows(RecursoNoEncontradoException.class,
                 () -> tipoEmpresaService.findById(1L));
     }
 
+    // ==========================
+    // save
+    // ==========================
+
     @Test
     public void testSave_Valido() {
-        TipoEmpresaModel entrada = new TipoEmpresaModel();
-        entrada.setNombre("  Publisher  ");
+        TipoEmpresaRequestDTO entrada = request("Publisher");
 
-        when(tipoEmpresaRepository.existsByNombreIgnoreCase("Publisher")).thenReturn(false);
+        when(tipoEmpresaRepository.save(any(TipoEmpresaModel.class)))
+                .thenAnswer(invocation -> {
+                    TipoEmpresaModel m = invocation.getArgument(0);
+                    m.setId(1L);
+                    return m;
+                });
+
+        TipoEmpresaResponseDTO resultado = tipoEmpresaService.save(entrada);
+
+        assertNotNull(resultado);
+        assertEquals(1L, resultado.getId());
+        assertEquals("Publisher", resultado.getNombre());
+        verify(tipoEmpresaRepository, times(1)).save(any(TipoEmpresaModel.class));
+    }
+
+    // ==========================
+    // update (PUT)
+    // ==========================
+
+    @Test
+    public void testUpdate_CambiaNombre() {
+        TipoEmpresaModel existente = tipoEmpresaEntity();
+        TipoEmpresaRequestDTO entrada = request("Distribuidora");
+
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.of(existente));
         when(tipoEmpresaRepository.save(any(TipoEmpresaModel.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
 
-        TipoEmpresaModel resultado = tipoEmpresaService.save(entrada);
+        TipoEmpresaResponseDTO resultado = tipoEmpresaService.update(1L, entrada);
 
         assertNotNull(resultado);
-        assertEquals("Publisher", resultado.getNombre());
-        verify(tipoEmpresaRepository).save(any(TipoEmpresaModel.class));
-    }
-
-    @Test
-    public void testSave_NombreVacio_LanzaIllegalArgument() {
-        TipoEmpresaModel entrada = new TipoEmpresaModel();
-        entrada.setNombre("   ");
-
-        assertThrows(IllegalArgumentException.class,
-                () -> tipoEmpresaService.save(entrada));
-
-        verify(tipoEmpresaRepository, never()).save(any(TipoEmpresaModel.class));
-    }
-
-    @Test
-    public void testSave_NombreDuplicado_LanzaIllegalArgument() {
-        TipoEmpresaModel entrada = new TipoEmpresaModel();
-        entrada.setNombre("Publisher");
-
-        when(tipoEmpresaRepository.existsByNombreIgnoreCase("Publisher")).thenReturn(true);
-
-        assertThrows(IllegalArgumentException.class,
-                () -> tipoEmpresaService.save(entrada));
-
-        verify(tipoEmpresaRepository, never()).save(any(TipoEmpresaModel.class));
-    }
-
-    @Test
-    public void testUpdate_CambiaNombreValido() {
-        TipoEmpresaModel existente = tipoEmpresa();
-        TipoEmpresaModel entrada = new TipoEmpresaModel();
-        entrada.setNombre("Distribuidora");
-
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.of(existente));
-        when(tipoEmpresaRepository.existsByNombreIgnoreCase("Distribuidora")).thenReturn(false);
-        when(tipoEmpresaRepository.save(existente)).thenReturn(existente);
-
-        TipoEmpresaModel resultado = tipoEmpresaService.update(1L, entrada);
-
+        assertEquals(1L, resultado.getId());
         assertEquals("Distribuidora", resultado.getNombre());
     }
 
     @Test
-    public void testUpdate_NombreVacio_LanzaIllegalArgument() {
-        TipoEmpresaModel existente = tipoEmpresa();
-        TipoEmpresaModel entrada = new TipoEmpresaModel();
-        entrada.setNombre("   ");
+    public void testUpdate_NoExiste_LanzaRecursoNoEncontrado() {
+        TipoEmpresaRequestDTO entrada = request("Distribuidora");
 
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.of(existente));
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.empty());
 
-        assertThrows(IllegalArgumentException.class,
+        assertThrows(RecursoNoEncontradoException.class,
                 () -> tipoEmpresaService.update(1L, entrada));
     }
 
+    // ==========================
+    // patch (PATCH)
+    // ==========================
+
     @Test
-    public void testUpdate_NombreDuplicado_LanzaIllegalArgument() {
-        TipoEmpresaModel existente = tipoEmpresa();
-        TipoEmpresaModel entrada = new TipoEmpresaModel();
-        entrada.setNombre("Distribuidora");
+    public void testPatch_CambiaNombre() {
+        TipoEmpresaModel existente = tipoEmpresaEntity();
+        TipoEmpresaUpdateDTO dtoUpdate = update("Distribuidora");
 
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.of(existente));
-        when(tipoEmpresaRepository.existsByNombreIgnoreCase("Distribuidora")).thenReturn(true);
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.of(existente));
+        when(tipoEmpresaRepository.save(any(TipoEmpresaModel.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
-        assertThrows(IllegalArgumentException.class,
-                () -> tipoEmpresaService.update(1L, entrada));
+        TipoEmpresaResponseDTO resultado = tipoEmpresaService.patch(1L, dtoUpdate);
+
+        assertNotNull(resultado);
+        assertEquals(1L, resultado.getId());
+        assertEquals("Distribuidora", resultado.getNombre());
     }
 
     @Test
-    public void testDeleteById_EliminaCuandoNoTieneRelaciones() {
-        TipoEmpresaModel existente = tipoEmpresa();
+    public void testPatch_SinNombre_NoCambia() {
+        TipoEmpresaModel existente = tipoEmpresaEntity();
+        TipoEmpresaUpdateDTO dtoUpdate = update(null);
 
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.of(existente));
-        when(tiposEmpresaRepository.existsByTipoEmpresa_Id(1L)).thenReturn(false);
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.of(existente));
+        when(tipoEmpresaRepository.save(any(TipoEmpresaModel.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
+        TipoEmpresaResponseDTO resultado = tipoEmpresaService.patch(1L, dtoUpdate);
+
+        assertNotNull(resultado);
+        assertEquals(1L, resultado.getId());
+        assertEquals("Publisher", resultado.getNombre());
+    }
+
+    @Test
+    public void testPatch_NoExiste_LanzaRecursoNoEncontrado() {
+        TipoEmpresaUpdateDTO dtoUpdate = update("Distribuidora");
+
+        when(tipoEmpresaRepository.findById(1L))
+                .thenReturn(Optional.empty());
+
+        assertThrows(RecursoNoEncontradoException.class,
+                () -> tipoEmpresaService.patch(1L, dtoUpdate));
+    }
+
+    // ==========================
+    // deleteById
+    // ==========================
+
+    @Test
+    public void testDeleteById_SinRelaciones_Elimina() {
+        when(tiposEmpresaRepository.existsByTipoEmpresa_Id(1L))
+                .thenReturn(false);
 
         tipoEmpresaService.deleteById(1L);
 
@@ -170,14 +224,12 @@ public class TipoEmpresaServiceTest {
 
     @Test
     public void testDeleteById_ConRelaciones_LanzaIllegalState() {
-        TipoEmpresaModel existente = tipoEmpresa();
-
-        when(tipoEmpresaRepository.findById(1L)).thenReturn(Optional.of(existente));
-        when(tiposEmpresaRepository.existsByTipoEmpresa_Id(1L)).thenReturn(true);
+        when(tiposEmpresaRepository.existsByTipoEmpresa_Id(1L))
+                .thenReturn(true);
 
         assertThrows(IllegalStateException.class,
                 () -> tipoEmpresaService.deleteById(1L));
 
-        verify(tipoEmpresaRepository, never()).deleteById(1L);
+        verify(tipoEmpresaRepository, never()).deleteById(anyLong());
     }
 }
