@@ -1,32 +1,31 @@
-// Ruta: src/test/java/com/example/NoLimits/service/RolServiceTest.java
 package com.example.NoLimits.service.usuario;
 
 import com.example.NoLimits.Multimedia._exceptions.RecursoNoEncontradoException;
+import com.example.NoLimits.Multimedia.dto.usuario.request.RolRequestDTO;
+import com.example.NoLimits.Multimedia.dto.usuario.response.RolResponseDTO;
+import com.example.NoLimits.Multimedia.dto.usuario.update.RolUpdateDTO;
 import com.example.NoLimits.Multimedia.model.usuario.RolModel;
 import com.example.NoLimits.Multimedia.repository.usuario.RolRepository;
 import com.example.NoLimits.Multimedia.service.usuario.RolService;
-
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ActiveProfiles;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.anyLong;
-import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.times;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -38,34 +37,62 @@ public class RolServiceTest {
     @MockBean
     private RolRepository rolRepository;
 
-    private RolModel crearRol() {
+    // ================== HELPERS ==================
+
+    private RolModel crearRolModel() {
         RolModel r = new RolModel();
         r.setId(1L);
         r.setNombre("ADMIN");
+        r.setDescripcion("Rol administrador");
         r.setActivo(true);
         return r;
     }
 
+    private RolRequestDTO crearRequestDTO() {
+        RolRequestDTO dto = new RolRequestDTO();
+        dto.setNombre("CLIENTE");
+        dto.setDescripcion("Rol cliente");
+        dto.setActivo(true);
+        return dto;
+    }
+
+    private RolUpdateDTO crearUpdateDTO() {
+        RolUpdateDTO dto = new RolUpdateDTO();
+        dto.setNombre("VENDEDOR");
+        dto.setDescripcion("Rol vendedor");
+        dto.setActivo(false);
+        return dto;
+    }
+
+    // ================== FIND ==================
+
     @Test
     public void testFindAll() {
-        when(rolRepository.findAll()).thenReturn(Arrays.asList(crearRol()));
+        when(rolRepository.findAll()).thenReturn(List.of(crearRolModel()));
 
-        List<RolModel> result = rolService.findAll();
+        List<RolResponseDTO> result = rolService.findAll();
 
         assertNotNull(result);
         assertEquals(1, result.size());
+
+        RolResponseDTO dto = result.get(0);
+        assertEquals(1L, dto.getId());
+        assertEquals("ADMIN", dto.getNombre());
+        assertEquals("Rol administrador", dto.getDescripcion());
+        assertTrue(dto.getActivo());
         verify(rolRepository, times(1)).findAll();
     }
 
     @Test
     public void testFindById_Existe() {
-        RolModel r = crearRol();
-        when(rolRepository.findById(1L)).thenReturn(Optional.of(r));
+        when(rolRepository.findById(1L)).thenReturn(Optional.of(crearRolModel()));
 
-        RolModel result = rolService.findById(1L);
+        RolResponseDTO result = rolService.findById(1L);
 
         assertNotNull(result);
+        assertEquals(1L, result.getId());
         assertEquals("ADMIN", result.getNombre());
+        assertTrue(result.getActivo());
     }
 
     @Test
@@ -76,48 +103,132 @@ public class RolServiceTest {
                 () -> rolService.findById(99L));
     }
 
+    // ================== SAVE (CREATE) ==================
+
+    @Test
+    public void testSave_OK() {
+        RolRequestDTO dto = new RolRequestDTO();
+        dto.setNombre("  CLIENTE  ");
+        dto.setDescripcion("Rol de cliente final");
+        dto.setActivo(true);
+
+        when(rolRepository.save(any(RolModel.class)))
+                .thenAnswer(inv -> {
+                    RolModel r = inv.getArgument(0);
+                    r.setId(2L);
+                    return r;
+                });
+
+        RolResponseDTO result = rolService.save(dto);
+
+        assertNotNull(result);
+        assertEquals(2L, result.getId());
+        assertEquals("CLIENTE", result.getNombre()); // normalizado
+        assertEquals("Rol de cliente final", result.getDescripcion());
+        assertTrue(result.getActivo());
+        verify(rolRepository, times(1)).save(any(RolModel.class));
+    }
+
     @Test
     public void testSave_NombreVacio_LanzaIllegalArgumentException() {
-        RolModel r = new RolModel();
-        r.setNombre("  ");
+        RolRequestDTO dto = new RolRequestDTO();
+        dto.setNombre("   ");
+        dto.setActivo(true);
 
         IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                () -> rolService.save(r));
+                () -> rolService.save(dto));
 
         assertTrue(ex.getMessage().contains("nombre del rol es obligatorio"));
         verify(rolRepository, never()).save(any(RolModel.class));
     }
 
     @Test
-    public void testSave_OK() {
-        RolModel entrada = new RolModel();
-        entrada.setNombre("  CLIENTE  ");
+    public void testSave_ActivoNull_LanzaIllegalArgumentException() {
+        RolRequestDTO dto = new RolRequestDTO();
+        dto.setNombre("CLIENTE");
+        dto.setActivo(null);
 
-        when(rolRepository.save(any(RolModel.class))).thenAnswer(inv -> inv.getArgument(0));
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+                () -> rolService.save(dto));
 
-        RolModel result = rolService.save(entrada);
+        assertTrue(ex.getMessage().contains("estado 'activo' del rol es obligatorio"));
+        verify(rolRepository, never()).save(any(RolModel.class));
+    }
 
-        assertEquals("CLIENTE", result.getNombre());
+    // ================== UPDATE (PUT) ==================
+
+    @Test
+    public void testUpdate_CambiaTodosLosCampos() {
+        RolModel existente = crearRolModel(); // ADMIN, true
+
+        RolUpdateDTO in = crearUpdateDTO();   // VENDEDOR, "Rol vendedor", false
+
+        when(rolRepository.findById(1L)).thenReturn(Optional.of(existente));
+        when(rolRepository.save(any(RolModel.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        RolResponseDTO result = rolService.update(1L, in);
+
+        assertNotNull(result);
+        assertEquals(1L, result.getId());
+        assertEquals("VENDEDOR", result.getNombre());
+        assertEquals("Rol vendedor", result.getDescripcion());
+        assertEquals(false, result.getActivo());
     }
 
     @Test
-    public void testUpdate_CambiaNombre() {
-        RolModel existente = crearRol();
+    public void testUpdate_NombreVacio_LanzaIllegalArgument() {
+        RolModel existente = crearRolModel();
 
-        RolModel in = new RolModel();
-        in.setNombre("  VENDEDOR  ");
+        RolUpdateDTO in = new RolUpdateDTO();
+        in.setNombre("   ");
 
         when(rolRepository.findById(1L)).thenReturn(Optional.of(existente));
-        when(rolRepository.save(any(RolModel.class))).thenAnswer(inv -> inv.getArgument(0));
 
-        RolModel result = rolService.update(1L, in);
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+                () -> rolService.update(1L, in));
 
-        assertEquals("VENDEDOR", result.getNombre());
+        assertTrue(ex.getMessage().contains("nombre no puede estar vacío"));
+        verify(rolRepository, never()).save(any(RolModel.class));
     }
+
+    @Test
+    public void testUpdate_IdNoExiste_LanzaRecursoNoEncontrado() {
+        RolUpdateDTO in = crearUpdateDTO();
+
+        when(rolRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThrows(RecursoNoEncontradoException.class,
+                () -> rolService.update(99L, in));
+        verify(rolRepository, never()).save(any(RolModel.class));
+    }
+
+    // ================== PATCH (delegado a update) ==================
+
+    @Test
+    public void testPatch_CambiaSoloActivo() {
+        RolModel existente = crearRolModel(); // activo = true
+
+        RolUpdateDTO in = new RolUpdateDTO();
+        in.setActivo(false);
+
+        when(rolRepository.findById(1L)).thenReturn(Optional.of(existente));
+        when(rolRepository.save(any(RolModel.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        RolResponseDTO result = rolService.patch(1L, in);
+
+        assertNotNull(result);
+        assertEquals(1L, result.getId());
+        assertEquals("ADMIN", result.getNombre()); // nombre se mantiene
+        assertEquals(false, result.getActivo());
+    }
+
+    // ================== DELETE ==================
 
     @Test
     public void testDeleteById_ConUsuarios_LanzaIllegalStateException() {
-        when(rolRepository.findById(1L)).thenReturn(Optional.of(crearRol()));
+        when(rolRepository.findById(1L)).thenReturn(Optional.of(crearRolModel()));
         when(rolRepository.existeUsuarioConRol(1L)).thenReturn(true);
 
         IllegalStateException ex = assertThrows(IllegalStateException.class,
@@ -129,11 +240,21 @@ public class RolServiceTest {
 
     @Test
     public void testDeleteById_SinUsuarios_EliminaOK() {
-        when(rolRepository.findById(1L)).thenReturn(Optional.of(crearRol()));
+        when(rolRepository.findById(1L)).thenReturn(Optional.of(crearRolModel()));
         when(rolRepository.existeUsuarioConRol(1L)).thenReturn(false);
 
         rolService.deleteById(1L);
 
         verify(rolRepository, times(1)).deleteById(1L);
+    }
+
+    @Test
+    public void testDeleteById_NoExiste_LanzaRecursoNoEncontrado() {
+        when(rolRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(RecursoNoEncontradoException.class,
+                () -> rolService.deleteById(1L));
+
+        verify(rolRepository, never()).deleteById(anyLong());
     }
 }
